--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,7 @@ tracing = "0.1"
 tracing-subscriber = "0.3"
 thiserror = "1.0"
 anyhow = "1.0"
+argon2 = "0.5"
+jsonwebtoken = "9"
+diesel = { version = "2.1.1", features = ["postgres", "r2d2", "chrono"] }
+"diesel-async" = { version = "0.4", features = ["postgres", "tokio-postgres"] }
