--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,5 +14,8 @@ thiserror = "1.0"
 anyhow = "1.0"
 argon2 = "0.5"
 jsonwebtoken = "9"
-diesel = { version = "2.1.1", features = ["postgres", "r2d2", "chrono"] }
-"diesel-async" = { version = "0.4", features = ["postgres", "tokio-postgres"] }
+diesel = { version = "2.2.3", features = ["postgres", "r2d2", "chrono", "uuid"] }
+"diesel-async" = { version = "0.7.3", features = ["postgres", "tokio-postgres"] }
+uuid = { version = "1", features = ["serde", "v4"] }
+chrono = { version = "0.4", features = ["serde"] }
+rand_core = { version = "0.6", features = ["getrandom"] }
