--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,13 +7,13 @@ services:
     container_name: ferrite-postgres
     restart: unless-stopped
     environment:
-      POSTGRES_USER: ${POSTGRES_USER:-postgres}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
-      POSTGRES_DB: ${POSTGRES_DB:-ferrite}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
       # Performance tuning
       POSTGRES_INITDB_ARGS: "-E UTF8 --locale=C"
     ports:
-      - "${POSTGRES_PORT:-5432}:5432"
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
@@ -34,21 +34,21 @@ services:
     container_name: ferrite-backend
     restart: unless-stopped
     environment:
-      # Database configuration
-      DATABASE_URL: postgres://${POSTGRES_USER:-postgres}:${POSTGRES_PASSWORD:-postgres}@postgres:5432/${POSTGRES_DB:-ferrite}
+      # Database configuration (no defaults - must be provided)
+      DATABASE_URL: postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@postgres:5432/${POSTGRES_DB}
       
-      # JWT Secret (should be set in .env file)
-      JWT_SECRET: ${JWT_SECRET:-change_this_secret_in_production_minimum_32_characters_required}
+      # JWT Secret (MUST be set in .env file - minimum 32 characters)
+      JWT_SECRET: ${JWT_SECRET}
       
       # Server configuration
-      HOST: ${HOST:-0.0.0.0}
-      PORT: ${PORT:-8080}
+      HOST: ${HOST}
+      PORT: ${PORT}
       
       # Rust configuration
-      RUST_LOG: ${RUST_LOG:-info}
-      RUST_BACKTRACE: ${RUST_BACKTRACE:-1}
+      RUST_LOG: ${RUST_LOG}
+      RUST_BACKTRACE: ${RUST_BACKTRACE}
     ports:
-      - "${APP_PORT:-8080}:8080"
+      - "${APP_PORT}:8080"
     depends_on:
       postgres:
         condition: service_healthy
@@ -73,12 +73,12 @@ services:
     container_name: ferrite-pgadmin
     restart: unless-stopped
     environment:
-      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL:-admin@ferrite.local}
-      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD:-admin}
+      PGADMIN_DEFAULT_EMAIL: ${PGADMIN_EMAIL}
+      PGADMIN_DEFAULT_PASSWORD: ${PGADMIN_PASSWORD}
       PGADMIN_CONFIG_SERVER_MODE: 'False'
       PGADMIN_CONFIG_MASTER_PASSWORD_REQUIRED: 'False'
     ports:
-      - "${PGADMIN_PORT:-5050}:80"
+      - "${PGADMIN_PORT}:80"
     depends_on:
       - postgres
     networks:
